/*
 * $Id: ChangeLog,v 1.5538 2007/05/18 17:27:41 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2007-05-18 12:12 UTC+0100 Patrick Mast <patrick/dot/mast/at/xharbour.com>
  * makefile.bc
    + Added thtml.prg to TIP.LIB

2007-05-17 13:20 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * source/compiler/harbour.sly
    * Typo in last commit
    
2007-05-17 00:41 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * make_b32.bat
    * Allow cgl and map files
  * include/hbexprb.c
  * source/common/expropt1.c
  * source/compiler/harbour.c
  * source/compiler/harbour.sly
    * Memory leaks
  * source/compiler/genc.c
    * GPF trap
    
2007-05-18 10:26 UTC-0300 Antonio Carlos Pantaglione <toninho@fwi.com.br>
  * source/rtl/fstemp.c
    + fixed pending TODO, to use pszPrefix in HB_WIN32_IO

2007-05-18 12:06 UTC+0100 Miguel Angel Marchuet (miguelangel/at/marchuet.net)
  + source/rdd/usrrdd/rdds/ansirdd.prg
  * source/rdd/usrrdd/rdds/makefile
  * makefile.bc
  * makefile.pc
    + RDD that inhiretes from BMDBFCDX manage OEM data at DBF field and 
      automatically convert to ANSI 

2007-05-18 11:32 UTC+0100 Miguel Angel Marchuet (miguelangel/at/marchuet.net)
  * include/hbapi.h
  * include/usrrdd.ch
  * source/rdd/dbf1.c
  * source/rdd/dbfdbt/dbfdbt1.c
  * source/rdd/dbffpt/dbffpt1.c
  * source/rdd/usrrdd/rdds/adordd.prg
  * source/rdd/workarea.c
    + added support to fieldtype P (Picture)
      P  	Picture   10 digits (bytes) representing a .DBT block number.
      The number is stored as a string, right justified and padded with blanks.

      (foxpro compatible) 

  * source/rdd/userrdd/rdds/adordd.prg
    + Added support to MEMO fields

2007-05-18 00:07 UTC+0100 Miguel Angel Marchuet (miguelangel/at/marchuet.net)
  * include/adordd.ch
  * source/rdd/usrrdd/rdds/adordd.prg