@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.5538 2007/05/18 17:27:41 ronpinkas Exp $
+ * $Id: ChangeLog,v 1.5539 2007/05/19 10:14:11 patrickmast Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,10 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2007-05-19 10:06 UTC-0300 Antonio Carlos Pantaglione <toninho@fwi.com.br>
+  * source/rtl/fstemp.c
+    + Changes in my last commit to make MSVC 8 happy. Thanks Ranier.
 
 2007-05-18 12:12 UTC+0100 Patrick Mast <patrick/dot/mast/at/xharbour.com>
   * makefile.bc
